Menu icon fixed
Se agregó el enlace para que funcionen los íconos

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
  
     <section class="header">
@@ -75,7 +76,8 @@
           <img src="../LKS/assets/Auditoría.png" style="width:100%">
           <div class="text">Auditoría</div>
         </div>
-        
+<!--         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
         </div>
         <br>
         
@@ -99,8 +101,8 @@
             <h3>Kelly Muñoz</h3>
             <p>
               Contadora 
-              Especialista en Gerencia Tributaria
-              Con quince años de experiencia
+              <br>Especialista en Gerencia Tributaria con quince años de experiencia
+              <br>Soy una profesional comprometida y enfocada en brindar un servicio de calidad y con un enfoque en la satisfacción del cliente.
             </p>
           </div>
           </div>
@@ -111,7 +113,8 @@
             <h3>Ledy Páez</h3>
             <p>
               Contadora 
-              Especialista en Gerencia Tributaria
+              <br>Especialista en Gerencia Tributaria
+              <br>Mi objetivo es ayudar a mis clientes a maximizar su eficiencia financiera y minimizar los riesgos legales y tributarios asociados a su actividad empresarial.
             </p>
           </div>
           </div>
@@ -207,6 +210,8 @@
     setTimeout(showSlides, 5000); // Change image every 5 seconds
   }
   </script>
+
+  
     <!-----------------------JavaScript Toggle Menu---------------------------------->
     <script>
       var navLinks = document.getElementById("navLinks");
