--- a/contacto.html
+++ b/contacto.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <section class="header">
@@ -31,6 +32,10 @@
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
+        <!-- <div class="menu-btn" onclick="showMenu()"> -->
+          <!-- <div class="center"></div> -->
+        </div>
+        
       </nav>
 
       <div class="text-box">
@@ -181,6 +186,9 @@
     function hideMenu() {
       navLinks.style.right = "-300px";
     }
+
+    
+
   </script>
 </body>
 </html>
