--- a/servicios.html
+++ b/servicios.html
@@ -15,13 +15,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <section class="header">
       <nav>
         <a class="logo-link" href="index.html"></a>
         <div class="nav-links" id="navLinks">
-          <i class="fa fa-times" onclick="hideMenu()"></i>
+          <i class="fa fa-times" onclick="hideMenu()" style="font-size:24px"></i>
           <ul>
             <li><a href="index.html" style="--clr: #22e2ff; --i: 0">INICIO</a></li>
             <li><a href="nosotros.html">CONÓCENOS</a></li>
