--- a/nosotros.html
+++ b/nosotros.html
@@ -49,26 +49,26 @@
       <p>Contáctanos para que juntos podamos llevar tu empresa al siguiente nivel.</p>
 
       <div class="row">
-        <div class="course-col">
+        <div class="box">
           <span></span>
           <div class="content">
           <h3>Kelly Muñoz</h3>
           <p>
-            Contadora 
+            Contadora, 
             Especialista en Gerencia Tributaria
-            Con quince años de experiencia
+            con quince años de experiencia.
             <br>Soy una profesional comprometida y enfocada en brindar un servicio de calidad y con un enfoque en la satisfacción del cliente.
           </p>
         </div>
         </div>
 
-        <div class="course-col">
+        <div class="box">
           <span></span>
           <div class="content">
           <h3>Ledy Páez</h3>
           <p>
-            Contadora 
-            Especialista en Gerencia Tributaria
+            Contadora, 
+            Especialista en Gerencia Tributaria.
             <br>Mi objetivo es ayudar a mis clientes a maximizar su eficiencia financiera y minimizar los riesgos legales y tributarios asociados a su actividad empresarial.
           </p>
         </div>
@@ -89,7 +89,7 @@
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Contáctanos</h3>
                     <ul>
-                        <li><a href="#">asesores.lks@gmail.com</a></li>
+                        <li><a href="#">contactolksasesores@gmail.com</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
