--- a/servicios.html
+++ b/servicios.html
@@ -97,7 +97,7 @@
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Contáctanos</h3>
                     <ul>
-                        <li><a href="#">asesores.lks@gmail.com</a></li>
+                        <li><a href="#">contactolksasesores@gmail.com</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
