--- a/contacto.html
+++ b/contacto.html
@@ -96,7 +96,7 @@
 
           <label class="form-control">
             <input type="checkbox" name="checkbox" />
-            Certificado Ingresos Persona Natural
+            Certif. Ingresos Persona Natural
           </label>
 
           <label class="form-control">
@@ -123,7 +123,7 @@
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Contáctanos</h3>
                     <ul>
-                        <li><a href="#">asesores.lks@gmail.com</a></li>
+                        <li><a href="#">contactolksasesores@gmail.com</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
