Agregar detalle servicios
Eliminar archivos que no se usan y agregar detalle para cada servicio

--- a/contacto.html
+++ b/contacto.html
@@ -114,66 +114,66 @@
 
       </section>
 
- <div class="footer-clean">
-    <footer>
-        <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
-            </div>
-                <div class="col-sm-4 col-md-3 item">
-                    <h3>Contáctanos</h3>
-                    <ul>
-                        <li><a href="#">contactolksasesores@gmail.com</a></li>
-                    </ul>
+      <div class="footer-clean">
+        <footer>
+            <div class="container">
+                <div class="row justify-content-center">
+                  <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
                 </div>
-                <div class="col-sm-4 col-md-3 item">
-                    <h3>Outsourcing</h3>
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>Contáctanos</h3>
+                        <ul>
+                          <li><a href="mailto:contactolksasesores@gmail.com">contactolksasesores@gmail.com</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-3 item">
+                      <a href="outsourcing.html"><h3>Outsourcing</h3></a>
+                        <ul>
+                          <li><a>Outsourcing Contable</a></li>
+                          <li><a>Estados Financieros Anuales e Intermedios</a></li>
+                          <li><a>Gestión Administrativa y Financiera</a></li>
+                          <li><a>Outsourcing de Nómina</a></li>
+                          <li><a>De control Interno</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-3 item">
+                      <a href="revisoria.html"><h3>Revisoría Fiscal</h3></a>
+                        <ul>
+                          <li><a>Auditoría de Cumplimiento</a></li>
+                          <li><a>Auditoría Financiera</a></li>
+                          <li><a>Evaluación del sistema de control interno</a></li>
+                          <li><a>Tributario: Impuestos</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-3 item">
+                      <a href="consultoria.html"><h3>Consultoría</h3></a>
+                      <ul>
+                        <li><a>Prevención de Riesgos</a></li>
+                        <li><a>Control Interno</a></li>
+                        <li><a>Tributario: Impuestos</a></li>
+                        <li><a>Financiera</a></li>
+                        <li><a>Implementación control Interno</a></li>
+                        <li><a>Servicios Corporativos Tercerizados</a></li>
+                      </ul>
+                  </div>
+                  <div class="col-sm-4 col-md-3 item">
+                    <a href="auditoria.html"><h3>Auditoría</h3></a>
                     <ul>
-                      <li><a>Outsourcing Contable</a></li>
-                      <li><a>Estados Financieros Anuales e Intermedios</a></li>
-                      <li><a>Gestión Administrativa y Financiera</a></li>
-                      <li><a>Outsourcing de Nómina</a></li>
+                      <li><a>Auditoría Legal</a></li>
+                      <li><a>Auditoría Interna</a></li>
+                      <li><a>Auditoría Tributaria</a></li>
+                      <li><a>Auditoría Externa</a></li>
+                      <li><a>Auditoría Administrativa</a></li>
                       <li><a>De control Interno</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-4 col-md-3 item">
-                    <h3>Revisoría Fiscal</h3>
-                    <ul>
-                      <li><a>Auditoría de Cumplimiento</a></li>
-                      <li><a>Auditoría Financiera</a></li>
-                      <li><a>Evaluación del sistema de control interno</a></li>
-                      <li><a>Tributario: Impuestos</a></li>
-                    </ul>
+                    <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
+                      <p class="copyright">Shelsey</p>
+                  </div>
                 </div>
-                <div class="col-sm-4 col-md-3 item">
-                  <h3>Consultoría</h3>
-                  <ul>
-                    <li><a>Prevención de Riesgos</a></li>
-                    <li><a>Control Interno</a></li>
-                    <li><a>Tributario: Impuestos</a></li>
-                    <li><a>Financiera</a></li>
-                    <li><a>Implementación control Interno</a></li>
-                    <li><a>Servicios Corporativos Tercerizados</a></li>
-                  </ul>
-              </div>
-              <div class="col-sm-4 col-md-3 item">
-                <h3>Auditoría</h3>
-                <ul>
-                  <li><a>Auditoría Legal</a></li>
-                  <li><a>Auditoría Interna</a></li>
-                  <li><a>Auditoría Tributaria</a></li>
-                  <li><a>Auditoría Externa</a></li>
-                  <li><a>Auditoría Administrativa</a></li>
-                  <li><a>De control Interno</a></li>
-                </ul>
             </div>
-                <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
-                  <p class="copyright">Shelsey</p>
-              </div>
-            </div>
-        </div>
-    </footer>
-  </section>
+        </footer>
+      </section>
 
   <!-----------------------JavaScript Toggle Menu---------------------------------->
   <script>
